Fixed harcdoed gradle